# weird-midifw

./: .gitignore  Cargo.toml  build.sh  flash.sh
fw/: Cargo.toml
fw/src/: bootloader.rs  hardware.rs  main.rs  midi.rs  utils.rs  velocity.rs
fw/src/hardware/: debounce.rs  encoder.rs  i2c_mp.rs  matrix_pins.rs
teensy4-bsp/: Cargo.toml  README.md  build.rs
teensy4-bsp/src/: board.rs  clock_power.rs  lib.rs
teensy4-pins/: Cargo.toml  README.md
usbd-serial/: Cargo.toml  README.md
usbd-serial/src/: cdc_acm.rs  serial_port.rs
