[package]
name = "weird-midifw"
version = "0.1.0"
edition = "2021"

[dependencies]
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1", default-features = false, features = ["cortex-m-systick"] }

# Remove these if you don't want logging.
# imxrt-log = { version = "0.1", default-features = false, features = ["log", "usbd"] }
# log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

teensy4-panic = { version = "0.2", features = ["log"] }
defmt-bbq = "0.1"
defmt = "0.3"
# imxrt-hal = { git = "https://github.com/imxrt-rs/imxrt-hal", version = "0.6.0", rev = "870939e", features = ["defmt", "imxrt1060"] }
usb-device = { version = "0.3.2", features = ["control-buffer-256", "defmt", "test-class-high-speed"] }
usbd-serial = { path = "../usbd-serial" }
# usbd-serial = "0.2.2"
usbd-midi = "0.3.0"
# imxrt-ral = { version = "0.6", features = ["imxrt1062"] }
imxrt-usbd = "0.3.0"
teensy4-bsp = { path = "../teensy4-bsp" }

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
